feat(docs): 添加Tailwind CSS插件和样式优化
添加@tailwindcss/forms和@tailwindcss/typography插件依赖
更新tailwind配置添加自定义颜色和字体
新增CSS动画和实用工具类
优化输入CSS文件添加自定义层和动画效果
移除CDN引入改为本地构建
更新index.html文件结构

Signed-off-by: mc-yzy15 <124588885+mc-yzy15@users.noreply.github.com>

--- a/docs/package.json
+++ b/docs/package.json
@@ -12,5 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.4.0"
+  },
+  "dependencies": {
+    "@tailwindcss/forms": "^0.5.11",
+    "@tailwindcss/typography": "^0.5.19"
   }
 }
